<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lupa_kata_sandi">Lupa Password?</string>
    <string name="login_text">Masuk</string>
    <string name="not_have_account">Belum punya akun ?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="gender">Jenis kelamin</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="phone">No. Telepon</string>
    <string name="id_number">Nomor Telepon</string>
    <string name="address">Alamat</string>
    <string name="nik">NIK</string>
    <string name="register_page">Daftar</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="sertifikat_vaksin">Sertifikat Vaksin</string>
    <string name="riwayat_lengkap">Riwayat lengkap</string>
    <string name="riwayat_check_in">Riwayat Check-in</string>
    <string name="keluar">Keluar</string>
</resources>